ChristmusTrees/doc/logfile.txt
Project documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-sourcepath
C:\Users\david\Desktop\AP Comp-Sci Codes\AP-CompSci-September\ChristmusTrees
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\david\Desktop\AP Comp-Sci Codes\AP-CompSci-September\ChristmusTrees
-d
C:\Users\david\Desktop\AP Comp-Sci Codes\AP-CompSci-September\ChristmusTrees\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
-doctitle
ChristmusTrees
-windowtitle
ChristmusTrees
-author
-version
-nodeprecated
-package
-link
http://download.oracle.com/javase/8/docs/api/
C:\Users\david\Desktop\AP Comp-Sci Codes\AP-CompSci-September\ChristmusTrees/ChristmusTrees.java
<---- end of javadoc command ---->
Loading source file C:\Users\david\Desktop\AP Comp-Sci Codes\AP-CompSci-September\ChristmusTrees\ChristmusTrees.java...
C:\Users\david\Desktop\AP Comp-Sci Codes\AP-CompSci-September\ChristmusTrees\ChristmusTrees.java:35: error: invalid method declaration; return type required
    stem() {}
    ^
1 error
